RESOLVED FIXED297948
REGRESSION (299129@main): ASSERTION FAILED: !auditTokens.isEmpty() in WebKit::providePresentingApplicationPID
https://bugs.webkit.org/show_bug.cgi?id=297948
Summary REGRESSION (299129@main): ASSERTION FAILED: !auditTokens.isEmpty() in WebKit:...
Andy Estes
Reported 2025-08-26 20:23:56 PDT
SSIA
Attachments
Andy Estes
Comment 1 2025-08-26 20:38:14 PDT
Radar WebKit Bug Importer
Comment 2 2025-08-26 20:38:24 PDT
EWS
Comment 3 2025-08-27 11:04:45 PDT
Committed 299212@main (ca5e2cc9a290): <https://commits.webkit.org/299212@main> Reviewed commits have been landed. Closing PR #49919 and removing active labels.
Robert Jenner
Comment 4 2025-08-29 17:07:58 PDT
Reopened Bugzilla. REGRESSION(299129@main): [ iOS Debug ]ASSERTION FAILED: !isInAuxiliaryProcess() || MediaSessionHelper::sharedHelper().presentedApplicationPID(), tracking revert in https://bugs.webkit.org/show_bug.cgi?id=298131.
Andy Estes
Comment 5 2025-09-01 12:31:57 PDT
This wasn't reverted, and was instead fixed in bug #298131. Moving back to RESOLVED.
Note You need to log in before you can comment on or make changes to this bug.