REGRESSION (299129@main): ASSERTION FAILED: !auditTokens.isEmpty() in WebKit::providePresentingApplicationPID https://bugs.webkit.org/show_bug.cgi?id=297948 rdar://159248067

Reviewed by Youenn Fablet.

299129@main changed how PIDToInheritApplicationStateFrom is determined in the GPU process, but
failed to account for WKWebView clients that don't set a presentingApplicationAuditToken (which is
most clients, including Safari). For these clients, ASSERT(!auditTokens.isEmpty()) in
WebKit::providePresentingApplicationPID would fail. While there was not an assertion failure, it
was also unnecessary to set a PIDToInheritApplicationStateFrom prior to starting camera capture
when media capability grants are enabled.

Addressed this by reverting to pre-299129@main behavior for clients that do not set a
presentingApplicationAuditToken.

* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::providePresentingApplicationPID):
  Do not set a PIDToInheritApplicationStateFrom when media capability grants are enabled.
* Source/WebKit/GPUProcess/media/RemoteAudioSessionProxyManager.cpp:
(WebKit::providePresentingApplicationPID):
  Do not set a PIDToInheritApplicationStateFrom when media capability grants are enabled, otherwise
  fall back to the UI process' PID when the client has not set presentingApplicationAuditToken.

Canonical link: https://commits.webkit.org/299212@main